@@ -76,6 +76,7 @@ Settings::Settings() : Glib::ObjectBase(typeid(Settings)),
     warnUserOnExtensions(*this, GLOBAL, "warnUserOnExtensions", true),
     syncSamplerInstrumentSelection(*this, GLOBAL, "syncSamplerInstrumentSelection", true),
     moveRootNoteWithRegionMoved(*this, GLOBAL, "moveRootNoteWithRegionMoved", true),
+    autoRestoreWindowDimension(*this, GLOBAL, "autoRestoreWindowDimension", false),
     mainWindowX(*this, MAIN_WINDOW, "x", -1),
     mainWindowY(*this, MAIN_WINDOW, "y", -1),
     mainWindowW(*this, MAIN_WINDOW, "w", -1),
@@ -117,6 +118,7 @@ Settings::Settings() : Glib::ObjectBase(typeid(Settings)),
     m_boolProps.push_back(&warnUserOnExtensions);
     m_boolProps.push_back(&syncSamplerInstrumentSelection);
     m_boolProps.push_back(&moveRootNoteWithRegionMoved);
+    m_boolProps.push_back(&autoRestoreWindowDimension);
     m_intProps.push_back(&mainWindowX);
     m_intProps.push_back(&mainWindowY);
     m_intProps.push_back(&mainWindowW);
